# sandbox_teds_vinicius

./: .dockerignore  .gitignore  README.md  docker-compose.yml
.taskmaster/: state.json
db/: Dockerfile
scripts/: prd.txt  run-load-tests.sh  run-security-scans.sh  test-smoke.sh
src/backend-generic/: alembic.ini  pyproject.toml
src/backend-generic/alembic/: env.py
src/backend-generic/alembic/versions/: 20260225_0001_initial_schema.py  20260225_0002_seed_roles.py  20260226_0003_products_sync_triggers.py  20260226_0004_add_payment_client_secret.py  20260227_0005_add_inventory_movement_user_id.py  20260227_0006_seed_admin_user.py  20260227_0007_seed_product_variants.py  20260227_0008_seed_variant_inventory.py
src/backend-generic/app/: db.py  main.py  ratelimit.py  security.py  security_hardening.py
src/backend-generic/app/models/: __init__.py  base.py  cart.py  cart_item.py  category.py  inventory.py  inventory_movement.py  order.py  order_item.py  payment.py  product.py  product_sync_queue.py  product_variant.py  role.py  user.py
src/backend-generic/app/routers/: auth.py  carts.py  inventory.py  orders.py  products.py  search.py  sync.py  webhooks.py
src/backend-generic/app/schemas/: cart.py  inventory.py  order.py  product.py  search.py
src/backend-generic/app/services/: __init__.py  embeddings.py  payments.py  stock.py  sync_listener.py  sync_processor.py  vector_store.py
src/backend-generic/scripts/: load_test_dashboard.py  load_test_orders.py  load_test_search.py  run_migration_checks.sh  test_embeddings.py  test_migrations.py
(+47 files in other folders)
