[project]
name = "backend-generic"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "bcrypt>=4.0.1,<5.0.0",
    "fastapi>=0.132.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "psycopg[binary]>=3.2.0",
    "SQLAlchemy>=2.0.0",
    "slowapi>=0.1.9",
    "structlog>=25.0.0",
    "uvicorn[standard]>=0.34.0",
]
