[project]
name = "backend-generic"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "bcrypt>=4.0.1,<5.0.0",
    "bleach>=6.2.0",
    "chromadb>=1.3.0",
    "fastapi>=0.132.0",
    "httpx>=0.28.0",
    "langchain-chroma>=1.0.0",
    "langchain-openai>=0.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "psycopg[binary]>=3.2.0",
    "SQLAlchemy>=2.0.0",
    "slowapi>=0.1.9",
    "stripe>=12.0.0",
    "structlog>=25.0.0",
    "uvicorn[standard]>=0.34.0",
    "black>=26.1.0",
    "pylint>=4.0.5",
    "flake8>=7.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.6.0",
]
